ns.yaml
# Namespace Definition

apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  labels:
    app: nginx-webapp
    environment: production
