service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webapp-svc
  namespace: webapp
  labels:
    app: nginx-webapp
spec:
  type: ClusterIP
  selector:
    app: nginx-webapp
  ports:
    - name: http
      protocol: TCP
      port: 80         
      targetPort: 8080  # forwards to container port 8080
